PCS BAckup 26Dec2023/Backup-Source/objects/Phoenix_Competitor_WAC__c.object
<CustomObject>
    <fields>
        <fullName>Phoenix_Competitor_Name__c</fullName>
        <label>Competitor Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Material_Code__c</fullName>
        <label>Material Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_WAC_Change__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WAC Change</label>
        <referenceTo>Phoenix_WAC_Change__c</referenceTo>
        <relationshipLabel>Competitor WACs</relationshipLabel>
        <relationshipName>Competitor_WACs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_WAC_Competitor_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WAC Competitor Product</label>
        <referenceTo>Phoenix_WAC_Competitor_Product__c</referenceTo>
        <relationshipLabel>Competitor WACs</relationshipLabel>
        <relationshipName>Competitor_WACs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_WAC_Price__c</fullName>
        <label>WAC Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Competitor WAC</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Phoenix_Material_Code__c</columns>
        <columns>Phoenix_Competitor_Name__c</columns>
        <columns>Phoenix_WAC_Price__c</columns>
        <columns>Phoenix_WAC_Competitor_Product__c</columns>
        <columns>Phoenix_WAC_Change__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Competitor WAC - {000000}</displayFormat>
        <label>Competitor WAC Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competitor WACs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>